// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Different ways to make an equation All Text in constructor with all options 1`] = `
FigureElementPrimitive2DText {
  "_custom": Object {},
  "afterDrawCallback": null,
  "angleToDraw": -1,
  "animationFinishedCallback": null,
  "animations": AnimationManager {
    "animationSpeed": 1,
    "animations": Array [],
    "customSteps": Array [],
    "element": [Circular],
    "finishedCallback": [Function],
    "fnMap": FunctionMap {
      "global": GlobalFunctionMap {
        "map": Object {},
      },
      "map": Object {},
    },
    "notifications": NotificationManager {
      "fnMap": FunctionMap {
        "global": GlobalFunctionMap {
          "map": Object {},
        },
        "map": Object {},
      },
      "notifications": Object {
        "frame": Notification {
          "fnMap": FunctionMap {
            "global": GlobalFunctionMap {
              "map": Object {},
            },
            "map": Object {},
          },
          "nextId": 1,
          "order": Array [
            "0",
          ],
          "subscribers": Object {
            "0": Object {
              "callback": [Function],
              "num": -1,
            },
          },
        },
      },
    },
    "options": Object {
      "translation": Object {},
    },
    "recorder": undefined,
    "state": "idle",
    "timeKeeper": TimeKeeper {
      "animateOnFrame": false,
      "drawQueue": Array [],
      "idCounter": 0,
      "lastDrawTime": null,
      "lastTime": 3000,
      "manual": false,
      "nextDrawQueue": Array [],
      "nowTime": 3000,
      "requestNextAnimationFrame": [MockFunction] {
        "calls": Array [
          Array [
            [Function],
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "speed": 1,
      "syncNowTimeout": 100,
      "timeoutId": null,
      "timers": Object {},
      "updateSyncNow": true,
    },
  },
  "beforeDrawCallback": null,
  "border": "draw",
  "cancelSetTransform": false,
  "cannotTouchHole": false,
  "color": Array [
    0.95,
    0,
    0,
    1,
  ],
  "copyTransforms": Array [],
  "custom": Object {},
  "customState": Object {},
  "defaultColor": Array [
    0.95,
    0,
    0,
    1,
  ],
  "dependantTransform": false,
  "dimColor": Array [
    0.5,
    0.5,
    0.5,
    1,
  ],
  "drawBorder": Array [
    Array [
      Point {
        "_type": "point",
        "x": 0,
        "y": -0.008,
        "z": 0,
      },
      Point {
        "_type": "point",
        "x": 0.1,
        "y": -0.008,
        "z": 0,
      },
      Point {
        "_type": "point",
        "x": 0.1,
        "y": 0.11,
        "z": 0,
      },
      Point {
        "_type": "point",
        "x": 0,
        "y": 0.11,
        "z": 0,
      },
    ],
  ],
  "drawBorderBuffer": Array [
    Array [
      Point {
        "_type": "point",
        "x": 0,
        "y": -0.008,
        "z": 0,
      },
      Point {
        "_type": "point",
        "x": 0.1,
        "y": -0.008,
        "z": 0,
      },
      Point {
        "_type": "point",
        "x": 0.1,
        "y": 0.11,
        "z": 0,
      },
      Point {
        "_type": "point",
        "x": 0,
        "y": 0.11,
        "z": 0,
      },
    ],
  ],
  "drawNumber": 0,
  "drawPriority": 1,
  "drawTransforms": Array [],
  "drawingObject": TextObject {
    "adjustments": Object {
      "ascent": 0,
      "descent": 0,
      "width": 0,
    },
    "alignedLocation": Array [
      Point {
        "_type": "point",
        "x": 0,
        "y": 0,
        "z": 0,
      },
    ],
    "bounds": Rect {
      "bottom": -0.008,
      "height": 0.118,
      "left": 0,
      "right": 0.1,
      "top": 0.10999999999999999,
      "width": 0.1,
    },
    "drawContext2D": DrawContext2D {
      "canvas": Object {
        "height": 1000,
        "offsetHeight": 500,
        "offsetWidth": 1000,
        "style": Object {
          "height": "500px",
          "width": "1000px",
        },
        "width": 2000,
      },
      "ctx": Object {
        "canvas": Object {
          "height": 500,
          "width": 1000,
        },
        "clearRect": [Function],
        "fillText": [Function],
        "filledText": Object {
          "count": 0,
          "text": "",
          "x": null,
          "y": null,
        },
        "font": "italic 200 20px Times New Roman",
        "measureText": [Function],
        "restore": [Function],
        "save": [Function],
        "scale": [Function],
        "textAlign": [Function],
        "textBaseline": [Function],
        "transform": [Function],
        "transformMatrix": Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ],
      },
      "ratio": 2,
      "resize": [Function],
    },
    "font": FigureFont {
      "atlasColor": false,
      "atlasSize": null,
      "color": Array [
        0.95,
        0,
        0,
        1,
      ],
      "descent": 0.08,
      "family": "Times New Roman",
      "glyphs": "mathlatin",
      "id": undefined,
      "letterSpacing": 0,
      "loadColor": Array [
        0,
        0,
        0,
        0,
      ],
      "map": Object {},
      "maxAscent": 1.5,
      "maxCount": 1,
      "maxDescent": 0.5,
      "midAscent": 1.1,
      "midDescent": 0.2,
      "modifiers": Object {},
      "mods": Object {
        " ": Object {
          "a": 1.1,
          "d": 0.08,
          "w": 1,
        },
        "$": Object {
          "a": 1.5,
          "d": 0.2,
          "w": 1,
        },
        "(": Object {
          "a": 1.5,
          "d": 0.5,
          "w": 1,
        },
        ")": Object {
          "a": 1.5,
          "d": 0.5,
          "w": 1,
        },
        "*": Object {
          "a": 1.1,
          "d": 0.08,
          "w": 1,
        },
        ",": Object {
          "a": 1.1,
          "d": 0.2,
          "w": 1,
        },
        "-": Object {
          "a": 1.1,
          "d": 0.08,
          "w": 1,
        },
        ":": Object {
          "a": 1.1,
          "d": 0.08,
          "w": 1,
        },
        ";": Object {
          "a": 1.1,
          "d": 0.2,
          "w": 1,
        },
        "@": Object {
          "a": 1.5,
          "d": 0.5,
          "w": 1,
        },
        "Q": Object {
          "a": 1.5,
          "d": 0.5,
          "w": 1,
        },
        "[": Object {
          "a": 1.5,
          "d": 0.5,
          "w": 1,
        },
        "]": Object {
          "a": 1.5,
          "d": 0.5,
          "w": 1,
        },
        "a": Object {
          "a": 1.1,
          "d": 0.08,
          "w": 1,
        },
        "c": Object {
          "a": 1.1,
          "d": 0.08,
          "w": 1,
        },
        "e": Object {
          "a": 1.1,
          "d": 0.08,
          "w": 1,
        },
        "f": Object {
          "a": 1.5,
          "d": 0.5,
          "w": 1.3,
        },
        "g": Object {
          "a": 1.1,
          "d": 0.5,
          "w": 1,
        },
        "j": Object {
          "a": 1.5,
          "d": 0.5,
          "w": 1,
        },
        "m": Object {
          "a": 1.1,
          "d": 0.08,
          "w": 1,
        },
        "n": Object {
          "a": 1.1,
          "d": 0.08,
          "w": 1,
        },
        "o": Object {
          "a": 1.1,
          "d": 0.08,
          "w": 1,
        },
        "p": Object {
          "a": 1.1,
          "d": 0.5,
          "w": 1,
        },
        "q": Object {
          "a": 1.1,
          "d": 0.5,
          "w": 1,
        },
        "r": Object {
          "a": 1.1,
          "d": 0.08,
          "w": 1,
        },
        "s": Object {
          "a": 1.1,
          "d": 0.08,
          "w": 1,
        },
        "u": Object {
          "a": 1.1,
          "d": 0.08,
          "w": 1,
        },
        "v": Object {
          "a": 1.1,
          "d": 0.08,
          "w": 1,
        },
        "w": Object {
          "a": 1.1,
          "d": 0.08,
          "w": 1,
        },
        "x": Object {
          "a": 1.1,
          "d": 0.08,
          "w": 1,
        },
        "y": Object {
          "a": 1.1,
          "d": 0.5,
          "w": 1,
        },
        "z": Object {
          "a": 1.1,
          "d": 0.08,
          "w": 1,
        },
        "{": Object {
          "a": 1.5,
          "d": 0.5,
          "w": 1,
        },
        "|": Object {
          "a": 1.5,
          "d": 0.5,
          "w": 1,
        },
        "}": Object {
          "a": 1.5,
          "d": 0.5,
          "w": 1,
        },
      },
      "opacity": 1,
      "outline": Object {
        "fill": true,
        "width": 0,
      },
      "render": "2d",
      "size": 0.2,
      "src": "",
      "style": "italic",
      "testString": "mathlatin",
      "timeout": 5,
      "underline": false,
      "weight": "200",
    },
    "lastDraw": Array [],
    "lastDrawTransform": Array [
      1,
      0,
      0,
      0,
      1,
      0,
      0,
      0,
      1,
    ],
    "location": Array [
      Point {
        "_type": "point",
        "x": 0,
        "y": 0,
        "z": 0,
      },
    ],
    "measure": Object {
      "ascent": 0.11,
      "border": Array [
        Array [
          Point {
            "_type": "point",
            "x": 0,
            "y": -0.008,
            "z": 0,
          },
          Point {
            "_type": "point",
            "x": 0.1,
            "y": -0.008,
            "z": 0,
          },
          Point {
            "_type": "point",
            "x": 0.1,
            "y": 0.11,
            "z": 0,
          },
          Point {
            "_type": "point",
            "x": 0,
            "y": 0.11,
            "z": 0,
          },
        ],
      ],
      "bottom": -0.008,
      "descent": 0.008,
      "left": 0,
      "right": 0.1,
      "top": 0.11,
      "width": 0.1,
    },
    "measurements": Array [
      Object {
        "bottom": -0.008,
        "left": 0,
        "right": 0.1,
        "top": 0.11,
      },
    ],
    "scalingFactor": 100,
    "text": Array [
      "a",
    ],
    "textBorder": Array [
      Array [
        Point {
          "_type": "point",
          "x": 0,
          "y": -0.008,
          "z": 0,
        },
        Point {
          "_type": "point",
          "x": 0.1,
          "y": -0.008,
          "z": 0,
        },
        Point {
          "_type": "point",
          "x": 0.1,
          "y": 0.11,
          "z": 0,
        },
        Point {
          "_type": "point",
          "x": 0,
          "y": 0.11,
          "z": 0,
        },
      ],
    ],
    "type": "drawingObject",
    "xAlign": "left",
    "yAlign": "baseline",
  },
  "fnMap": FunctionMap {
    "global": GlobalFunctionMap {
      "map": Object {},
    },
    "map": Object {
      "_elementPulseSettingsTransformMethod": Object {
        "fn": [Function],
      },
      "tools.math.easeinout": Object {
        "fn": [Function],
      },
      "tools.math.linear": Object {
        "fn": [Function],
      },
      "tools.math.sinusoid": Object {
        "fn": [Function],
      },
      "tools.math.sinusoidAbs": Object {
        "fn": [Function],
      },
      "tools.math.triangle": Object {
        "fn": [Function],
      },
    },
  },
  "frozenPulseTransforms": Array [],
  "interactiveLocation": Point {
    "_type": "point",
    "x": 0,
    "y": 0,
    "z": 0,
  },
  "internalSetTransformCallback": null,
  "isInteractive": undefined,
  "isMovable": false,
  "isRenderedAsImage": false,
  "isShown": true,
  "isTouchable": false,
  "lastDrawOpacity": 1,
  "lastDrawPulseTransform": Transform {
    "_type": "transform",
    "def": Array [
      Array [
        "s",
        1,
        1,
        1,
      ],
      Array [
        "r",
        0,
        0,
        0,
        1,
      ],
      Array [
        "t",
        0,
        0,
        0,
      ],
    ],
    "mat": Array [
      1,
      0,
      0,
      0,
      0,
      1,
      0,
      0,
      0,
      0,
      1,
      0,
      0,
      0,
      0,
      1,
    ],
  },
  "lastDrawTime": 0,
  "lengthToDraw": -1,
  "move": Object {
    "bounds": null,
    "element": null,
    "freely": Object {
      "bounceLoss": 0.5,
      "callback": null,
      "deceleration": 5,
      "zeroVelocityThreshold": 0.0001,
    },
    "maxVelocity": 5,
    "plane": Plane {
      "n": Point {
        "_type": "point",
        "x": 0,
        "y": 0,
        "z": 1,
      },
      "p": Point {
        "_type": "point",
        "x": 0,
        "y": 0,
        "z": 0,
      },
    },
    "type": "translation",
  },
  "moveSetTransform": false,
  "name": "a",
  "notifications": NotificationManager {
    "fnMap": FunctionMap {
      "global": GlobalFunctionMap {
        "map": Object {},
      },
      "map": Object {
        "_elementPulseSettingsTransformMethod": Object {
          "fn": [Function],
        },
        "tools.math.easeinout": Object {
          "fn": [Function],
        },
        "tools.math.linear": Object {
          "fn": [Function],
        },
        "tools.math.sinusoid": Object {
          "fn": [Function],
        },
        "tools.math.sinusoidAbs": Object {
          "fn": [Function],
        },
        "tools.math.triangle": Object {
          "fn": [Function],
        },
      },
    },
    "notifications": Object {},
  },
  "onAdd": null,
  "onClick": null,
  "opacity": 1,
  "parent": null,
  "parentTransform": Array [
    Transform {
      "_type": "transform",
      "def": Array [],
      "mat": Array [
        1,
        0,
        0,
        0,
        0,
        1,
        0,
        0,
        0,
        0,
        1,
        0,
        0,
        0,
        0,
        1,
      ],
    },
  ],
  "pointsDefinition": Object {},
  "pointsToDraw": -1,
  "pulseDefault": Object {
    "angle": 0,
    "centerOn": "this",
    "done": null,
    "duration": 1,
    "frequency": 0,
    "num": 1,
    "progression": "sinusoid",
    "rotation": null,
    "scale": 2,
    "space": "figure",
    "translation": null,
    "when": "syncNow",
    "xAlign": "center",
    "yAlign": "middle",
  },
  "pulseSettings": Object {
    "A": 1,
    "B": 0.5,
    "C": 0,
    "allowFreezeOnStop": false,
    "callback": [Function],
    "delta": Point {
      "_type": "point",
      "x": 0,
      "y": 0,
      "z": 0,
    },
    "frequency": 0.5,
    "num": 1,
    "progression": "tools.math.sinusoid",
    "time": 1,
    "transformMethod": "_elementPulseSettingsTransformMethod",
    "type": "scale",
  },
  "pulseTransforms": Array [],
  "recorder": Recorder {
    "audio": null,
    "currentTime": 0,
    "duration": 0,
    "eventIndex": Object {
      "_autoCursor": -1,
      "_autoCursorMove": -1,
      "_autoExec": -1,
      "_autoTouch": -1,
      "_autoTouchElement": -1,
      "cursor": -1,
      "cursorMove": -1,
      "exec": -1,
      "touch": -1,
      "touchElement": -1,
    },
    "events": Object {
      "_autoCursor": Object {
        "list": Array [],
        "playbackAction": [Function],
        "setOnSeek": true,
      },
      "_autoCursorMove": Object {
        "list": Array [],
        "playbackAction": [Function],
        "setOnSeek": true,
      },
      "_autoExec": Object {
        "list": Array [],
        "playbackAction": [Function],
        "setOnSeek": true,
      },
      "_autoTouch": Object {
        "list": Array [],
        "playbackAction": [Function],
        "setOnSeek": true,
      },
      "_autoTouchElement": Object {
        "list": Array [],
        "playbackAction": [Function],
        "setOnSeek": true,
      },
      "cursor": Object {
        "list": Array [],
        "playbackAction": [Function],
        "setOnSeek": true,
      },
      "cursorMove": Object {
        "list": Array [],
        "playbackAction": [Function],
        "setOnSeek": true,
      },
      "exec": Object {
        "list": Array [],
        "playbackAction": [Function],
        "setOnSeek": true,
      },
      "touch": Object {
        "list": Array [],
        "playbackAction": [Function],
        "setOnSeek": true,
      },
      "touchElement": Object {
        "list": Array [],
        "playbackAction": [Function],
        "setOnSeek": true,
      },
    },
    "eventsCache": Object {},
    "eventsToPlay": Array [],
    "figure": null,
    "isAudioPlaying": false,
    "lastRecordTime": null,
    "lastRecordTimeCount": 0,
    "lastSeekTime": null,
    "notifications": NotificationManager {
      "fnMap": FunctionMap {
        "global": GlobalFunctionMap {
          "map": Object {},
        },
        "map": Object {},
      },
      "notifications": Object {},
    },
    "pauseState": null,
    "precision": 8,
    "queueSeekId": null,
    "queueSeekTime": 0,
    "reference": "__base",
    "referenceIndex": 0,
    "settings": Object {
      "pause": "freeze",
      "play": "instant",
    },
    "state": "idle",
    "stateIndex": -1,
    "stateTimeStep": 1,
    "states": ObjectTracker {
      "baseReference": null,
      "diffs": Array [],
      "lastReferenceName": "__base",
      "precision": 8,
      "references": Object {},
    },
    "statesCache": ObjectTracker {
      "baseReference": null,
      "diffs": Array [],
      "lastReferenceName": "__base",
      "precision": 8,
      "references": Object {},
    },
    "timeKeeper": TimeKeeper {
      "animateOnFrame": false,
      "animationId": undefined,
      "drawQueue": Array [],
      "idCounter": 0,
      "lastDrawTime": null,
      "lastTime": 3000,
      "manual": false,
      "nextDrawQueue": Array [],
      "nowTime": 3000,
      "requestNextAnimationFrame": [MockFunction] {
        "calls": Array [
          Array [
            [Function],
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "speed": 1,
      "syncNowTimeout": 100,
      "timeoutId": null,
      "timers": Object {},
      "updateSyncNow": true,
    },
    "timeUpdates": 100,
    "timeUpdatesTimeoutID": null,
    "timeoutID": null,
    "videoToNowDelta": 0,
    "worker": null,
  },
  "renderedOnNextDraw": false,
  "scenarios": Object {},
  "scene": Scene {
    "aspectRatio": 0,
    "bottom": -1,
    "camera": Object {
      "lookAt": Point {
        "_type": "point",
        "x": 0,
        "y": 0,
        "z": 0,
      },
      "position": Point {
        "_type": "point",
        "x": 0,
        "y": 0,
        "z": 2,
      },
      "up": Point {
        "_type": "point",
        "x": 0,
        "y": 1,
        "z": 0,
      },
    },
    "cameraMatrix": Array [
      1,
      0,
      0,
      0,
      0,
      1,
      0,
      0,
      0,
      0,
      1,
      2,
      0,
      0,
      0,
      1,
    ],
    "cameraPosition": Point {
      "_type": "point",
      "x": 0,
      "y": 0,
      "z": 2,
    },
    "cameraVector": Point {
      "_type": "point",
      "x": 0,
      "y": 0,
      "z": -1,
    },
    "far": 10,
    "farCenter": Point {
      "_type": "point",
      "x": 0,
      "y": 0,
      "z": -8,
    },
    "farPlane": Plane {
      "n": Point {
        "_type": "point",
        "x": 0,
        "y": 0,
        "z": -1,
      },
      "p": Point {
        "_type": "point",
        "x": 0,
        "y": 0,
        "z": -8,
      },
    },
    "fieldOfView": 0.47123889803846897,
    "heightFar": 2,
    "heightNear": 2,
    "inverseViewProjectionMatrix": Array [
      1,
      0,
      0,
      0,
      0,
      1,
      0,
      0,
      -0,
      -0,
      -4.95,
      -3.05,
      0,
      0,
      0,
      1,
    ],
    "left": -1,
    "light": Object {
      "ambient": 0.4,
      "directional": Point {
        "_type": "point",
        "x": 1,
        "y": 1,
        "z": 1,
      },
      "point": Point {
        "_type": "point",
        "x": 10,
        "y": 10,
        "z": 10,
      },
    },
    "near": 0.1,
    "nearCenter": Point {
      "_type": "point",
      "x": 0,
      "y": 0,
      "z": 1.9,
    },
    "nearPlane": Plane {
      "n": Point {
        "_type": "point",
        "x": 0,
        "y": 0,
        "z": -1,
      },
      "p": Point {
        "_type": "point",
        "x": 0,
        "y": 0,
        "z": 1.9,
      },
    },
    "onUpdate": null,
    "pan": Point {
      "_type": "point",
      "x": 0,
      "y": 0,
      "z": 0,
    },
    "pannedCameraPosition": Point {
      "_type": "point",
      "x": 0,
      "y": 0,
      "z": 2,
    },
    "pannedLookAt": Point {
      "_type": "point",
      "x": 0,
      "y": 0,
      "z": 0,
    },
    "projectionMatrix": Array [
      1,
      0,
      0,
      -0,
      0,
      1,
      0,
      -0,
      0,
      0,
      -0.20202020202020202,
      -1.02020202020202,
      0,
      0,
      0,
      1,
    ],
    "right": 1,
    "rightVector": Point {
      "_type": "point",
      "x": 1,
      "y": -0,
      "z": 0,
    },
    "style": "2D",
    "top": 1,
    "upVector": Point {
      "_type": "point",
      "x": 0,
      "y": 1,
      "z": 0,
    },
    "viewMatrix": Array [
      1,
      0,
      0,
      0,
      0,
      1,
      0,
      0,
      0,
      0,
      1,
      -2,
      0,
      0,
      0,
      1,
    ],
    "viewProjectionMatrix": Array [
      1,
      0,
      0,
      0,
      0,
      1,
      0,
      0,
      0,
      0,
      -0.20202020202020202,
      0,
      0,
      0,
      0,
      1,
    ],
    "widthFar": 2,
    "widthNear": 2,
    "zoom": 1,
  },
  "setPointsFromDefinition": null,
  "setTransformCallback": null,
  "simple": false,
  "state": Object {
    "isBeingMoved": false,
    "isChanging": false,
    "isMovingFreely": false,
    "isPulsing": false,
    "movement": Object {
      "previousTime": null,
      "velocity": 0,
    },
    "preparingToStop": false,
    "pulse": Object {
      "startTime": null,
    },
  },
  "stateProperties": Array [],
  "tieToHTML": Object {
    "element": null,
    "scale": "fit",
    "updateOnResize": true,
  },
  "timeKeeper": TimeKeeper {
    "animateOnFrame": false,
    "animationId": undefined,
    "drawQueue": Array [],
    "idCounter": 0,
    "lastDrawTime": null,
    "lastTime": 3000,
    "manual": false,
    "nextDrawQueue": Array [],
    "nowTime": 3000,
    "requestNextAnimationFrame": [MockFunction] {
      "calls": Array [
        Array [
          [Function],
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    },
    "speed": 1,
    "syncNowTimeout": 100,
    "timeoutId": null,
    "timers": Object {},
    "updateSyncNow": true,
  },
  "touchBorder": "buffer",
  "touchScale": Point {
    "_type": "point",
    "x": 1,
    "y": 1,
    "z": 1,
  },
  "transform": Transform {
    "_type": "transform",
    "def": Array [
      Array [
        "s",
        0.45,
        0.45,
        1,
      ],
      Array [
        "r",
        0,
        0,
        0,
        1,
      ],
      Array [
        "t",
        1.865,
        1.9325,
        0,
      ],
    ],
    "mat": Array [
      0.45,
      0,
      0,
      1.865,
      0,
      0.45,
      0,
      1.9325,
      0,
      0,
      1,
      0,
      0,
      0,
      0,
      1,
    ],
  },
  "type": "primitive",
  "uid": "0000000000",
  "uniqueColor": null,
  "unrenderNextDraw": false,
}
`;

exports[`Different ways to make an equation Separate All Text 1`] = `
Array [
  0.7,
  0,
  0,
  0.035,
  0,
  0.7,
  0,
  0.0996,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Different ways to make an equation Separate All Text 2`] = `
Array [
  0.7,
  0,
  0,
  0.035,
  0,
  0.7,
  0,
  -0.091,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Different ways to make an equation Separate All Text 3`] = `
Array [
  0.14,
  0,
  0,
  0,
  0,
  0.01,
  0,
  0.049,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Different ways to make an equation Separate All Text 4`] = `
Array [
  0.7,
  0,
  0,
  0.14,
  0,
  0.7,
  0,
  0,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;
